--- a/src/webapp/main/package.json
+++ b/src/webapp/main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "libreevent",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "private": false,
   "scripts": {
     "dev": "vite --host",
@@ -18,9 +18,9 @@
     "vue3-draggable-resizable": "^1.6.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.10.2",
-    "vite": "^2.9.18",
+    "@vitejs/plugin-vue": "^5.1.4",
     "eslint": "^8.39.0",
-    "eslint-plugin-vue": "^9.17.0"
+    "eslint-plugin-vue": "^9.17.0",
+    "vite": "^5.4.6"
   }
 }
